<resources>
    <string name="app_name">Tree Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tag_info">Tree Management</string>
    <string name="title_activity_write_tag">Write Tag</string>
    <string name="tag_id">ID</string>
    <string name="name_of_tree">수목명</string>
    <string name="species_of_tree">수종명</string>
    <string name="date_of_planting">식수일</string>
    <string name="management_record">관리이력 </string>

    <string name="date_of_edit">날짜</string>
    <string name="activity">행위</string>
    <string name="note">비고</string>
    <string name="name_of_admin">관리자명</string>
    <string name="title_activity_edit">EditActivity</string>

    <string name="menu_edit">기본정보 수정</string>
    <string name="menu_about">about</string>
    <string name="title_activity_tag_edit">TagEditActivity</string>
</resources>